k8s/manifests/papra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
    spec:
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:26.6.1-rootless
          ports:
            - containerPort: 1221
          volumeMounts:
            - name: config
              mountPath: /app/app-data
            - name: documents
              mountPath: /documents
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: papra-config
        - name: documents
          persistentVolumeClaim:
            claimName: papra-documents
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
