k8s/manifests/papra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: zerossl-cloudflare-dns01
  name: papra
spec:
  ingressClassName: traefik
  rules:
    - host: papra.internal.chaldea.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papra
                port:
                  number: 1221
  tls:
    - hosts:
        - papra.internal.chaldea.dev
      secretName: papra-tls
